ocp4-examples-base/bigdata-orders/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    application: hello-world
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      application: hello-world
  template:
    metadata:
      labels:
        application: hello-world
    spec:
      containers:
        - name: http-server
          image: docker.io/centos/httpd-24-centos7:20200925-0f59b9f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "200m"
            limits:
              memory: "64Mi"
              cpu: "250m"
          volumeMounts:
            - name: html-content
              mountPath: /var/www/html
      volumes:
        - name: html-content
          configMap:
            name: html-content
