ocp4-examples-base/bigdata-orders/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: https
  labels:
    application: hello-world
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: hello-world
